--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.InvoiceActivity" />
         <activity android:name=".activity.ScannerQrActivity" />
+        <activity android:name=".activity.McPaymentActivity" />
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="fullSensor"
