--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android-extensions'
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.0"
+    compileSdkVersion 32
+    buildToolsVersion "32.0.0"
 
     defaultConfig {
         applicationId "com.odenktools.netzmeodenktools"
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -33,7 +34,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'com.google.guava:guava:31.1-android'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -46,26 +48,26 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "org.joda:joda-money:1.0.2"
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit"
+    implementation "com.squareup.retrofit2:converter-simplexml:$retrofit"
+    implementation "com.squareup.retrofit2:converter-jaxb:$retrofit"
     //noinspection GradleDependency
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.0"
-
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
-    implementation "org.apache.commons:commons-lang3:3.12.0"
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.2"
-    implementation "com.squareup.retrofit2:converter-scalars:2.7.2"
-    implementation "com.squareup.retrofit2:converter-simplexml:2.7.2"
-    implementation "com.squareup.retrofit2:converter-jaxb:2.7.2"
-
     // RX Java.
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "io.reactivex.rxjava2:rxjava:2.2.21"
 
+    //tools
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
+    implementation "org.apache.commons:commons-lang3:3.12.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "org.joda:joda-money:1.0.2"
-    implementation "joda-time:joda-time:2.9.4"
+    implementation "joda-time:joda-time:2.11.1"
     implementation 'io.github.pilgr:paperdb:2.7.2'
+
     //noinspection GradleDependency
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:4.9'
@@ -74,3 +76,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+apply plugin: 'kotlin-android'
