--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android-extensions'
 }
 
 android {
@@ -35,9 +34,8 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    //implementation 'androidx.annotation:annotation:1.5.0'
-    implementation 'com.google.guava:guava:31.1-android'
-    implementation 'com.google.code.gson:gson:2.9.0'
+    //noinspection GradleDependency
+    implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     //noinspection GradleDependency
@@ -46,8 +44,7 @@ dependencies {
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "org.joda:joda-money:1.0.2"
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
@@ -61,12 +58,16 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.21"
 
     //tools
+    implementation "org.joda:joda-money:1.0.2"
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
     implementation "org.apache.commons:commons-lang3:3.12.0"
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "org.joda:joda-money:1.0.2"
     implementation "joda-time:joda-time:2.11.1"
     implementation 'io.github.pilgr:paperdb:2.7.2'
+    implementation 'com.google.guava:guava:31.1-android'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     //noinspection GradleDependency
     testImplementation 'junit:junit:4.12'
